<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".UserDetails" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/displayRandomMinion"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/contentDescription"
            android:src="@drawable/ic_launcher" />

        <TextView
            android:id="@+id/displayTagline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tagline" />

        <TextView
            android:id="@+id/displayScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/score" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/linearLayout1"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/displayUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username" />

        <TextView
            android:id="@+id/displayCollege"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/college" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/displayQuestionsAttempted"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/questionsAttempted" />

            <TextView
                android:id="@+id/questionsAttempted"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/displayQuestionsRemaining"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/questionsRemaining" />

            <TextView
                android:id="@+id/questionsRemaining"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/displayCurrentQuestion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/currentQuestion" />

            <TextView
                android:id="@+id/currentQuestion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout3"
        android:layout_alignParentBottom="true" >

        <Button
            android:id="@+id/seeRank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="openRankActivity"
            android:text="@string/rank" />

        <Button
            android:id="@+id/editDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="editUserDetails"
            android:text="@string/edit" />

    </LinearLayout>

    <Button
        android:id="@+id/playGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout4"
        android:layout_centerHorizontal="true"
        android:onClick="playGame"
        android:text="@string/play" />

</RelativeLayout>