<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".QuestionActivity" >

    <Button
        android:id="@+id/takeHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:onClick="showHint"
        android:text="@string/hint" />

    <TextView
        android:id="@+id/displayQuestionNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/questionNo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/takeHint"
        android:layout_centerHorizontal="true" >

        <Button
            android:id="@+id/submitAnswer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="submitAnswer"
            android:text="@string/submit" />

        <EditText
            android:id="@+id/userAnswer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/typeAnswer" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <ImageView
        android:id="@+id/displayQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/displayQuestionNumber"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/currentQuestionImage"
        android:src="@drawable/ic_launcher" />

</RelativeLayout>